--- a/style.css
+++ b/style.css
@@ -26,3 +26,21 @@ html, body {
     height: 100%;
     background-color: aqua;
 }
+.logo{
+    height: 100px;
+    width: 100px;
+    background-color: black;
+    /* border-radius: 50%; */
+    position: relative;
+    padding: 0;
+
+}
+
+.logo h1{
+    font-size: 60px;
+    color: #ffcc00;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
